# libasdf

./: .bumpver.toml  .clang-format  .clang-tidy  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  CHANGES.rst  CMakeLists.txt  LICENSE  Makefile.am  README.rst  config.h.cmake  configure.ac  libasdf.pc.in  towncrier.toml
.github/workflows/: build.yaml  build.yml  cmake.yml
changes/: +allocs.bugfix  +cmake-version.misc  +gwcs-split.misc  +gwcs.misc  +initial-release.general  153.feature  173.bugfix  35.feature  62.feature  73.general
cmake/: ASDFConfig.cmake  ASDFDependencies.cmake  ASDFOptions.cmake  AddressAnalyzer.cmake  SubmoduleInit.cmake
docs/: CMakeLists.txt  Makefile.am  changes.rst  conf.py  environment.yml  error_handling.rst  extensions.rst  index.rst  links.rst  requirements.txt  values.rst
docs/api/asdf/: emitter.h.rst  error.h.rst  extension.h.rst  file.h.rst  value.h.rst  yaml.h.rst
docs/api/asdf/core/: ndarray.h.rst
docs/usage/: extensions.rst  opening.rst  overview.rst  values.rst  writing.rst
examples/: CMakeLists.txt  asdf_dump_key.c  asdf_dump_ndarray.c
include/: CMakeLists.txt  Makefile.am  asdf.h
include/asdf/: emitter.h  error.h  event.h  extension.h  extension_util.h  file.h  log.h  parse.h  parser.h  util.h  value.h  version.h  yaml.h
include/asdf/core/: asdf.h  extension_metadata.h  history_entry.h  ndarray.h  software.h  time.h
include/asdf/gwcs/: core.h  fitswcs_imaging.h  frame.h  frame2d.h  frame_celestial.h  gwcs.h  step.h  transform.h  wcs.h
include/asdf/gwcs/transforms/property/: bounding_box.h
m4/: homebrew.m4  sphinx.m4
scripts/: changelog.sh
src/: CMakeLists.txt  block.c  block.h  context.c  context.h  emitter.c  emitter.h  error.c  error.h  event.c  event.h  extension_registry.c  extension_registry.h  extension_util.c  extension_util.h  file.c  file.h  info.c  info.h  log.c  log.h  main.c  parse.c  parse.h  parse_util.c  parse_util.h  parser.c  parser.h  stream.c  stream.h  stream_intern.h  tag.c  tag.h  util.c  util.h  value.c  value.h  value_util.c  value_util.h  version.c  (+2 more)
src/compat/: endian.h
src/compression/: bzp2.c  compression.c  compression.h  compressor_registry.h  lz4.c  zlib.c
src/core/: asdf.c  datatype.c  extension_metadata.c  history_entry.c  ndarray.c  ndarray.h  ndarray_convert.c  ndarray_convert.h  software.c  time.c
src/gwcs/: fitswcs_imaging.c  fitswcs_imaging.h  frame.c  frame.h  frame2d.c  frame_celestial.c  step.c  step.h  transform.c  transform.h  wcs.c
src/gwcs/transforms/property/: bounding_box.c
src/gwcs/types/: asdf_gwcs_transform_map.h
src/types/: asdf_common_tag_map.h  asdf_extension_map.h
tests/: CMakeLists.txt  Makefile.am  info.c  munit.h  shell-test.sh  test-block.c  test-compression.c  test-core-extensions.c  test-emitter.c  test-event.c  test-event.unit  test-events.sh  test-extension.c  test-file.c  test-gwcs.c  test-info.sh  test-malloc-fail.c  test-ndarray.c  test-parse-util.c  test-parse.c  test-stream.c  test-tag.c  test-tests.c  test-time.c  test-value-util.c  test-value.c  test-verify-checksums.sh  test-version.c  util.c  util.h
tests/fixtures/: 255.asdf  anchors.asdf  byteorder.asdf  cube.asdf  datatypes.asdf  extension-metadata-with-package.asdf  malformatted_yaml.asdf.bad  multiple_hdu.asdf  ndarray-inline.asdf  nested.asdf  numeric.asdf  parse-minimal-extra-comment.asdf  parse-minimal.asdf  roman_wcs.asdf  scalars.asdf  tagged-scalars.asdf  tiles.asdf  time.asdf  trivial-extension.asdf  value-types.asdf
tests/fixtures/events/: basic.events.txt  complex.events.txt  compressed.events.txt  int.events.txt
tests/fixtures/info/: README.txt  anchor.info.txt  ascii.info.txt  basic.info.txt  complex.info.txt  compressed.info.txt  endian.info.txt  exploded.info.txt  exploded0000.info.txt  float.info.txt  int.info.txt  scalars.info.txt  shared.info.txt  stream.info.txt  structured.info.txt  unicode_bmp.info.txt  unicode_spp.info.txt
tests/fixtures/verify-checksums/: compressed.verify-checksums.txt
tests/scripts/: extract_doc_examples.py  generate_test_cpp_headers.sh  make_test_fixtures.py
