src_files = \
    src/block.c \
    src/context.c \
    src/error.c \
    src/event.c \
    src/file.c \
    src/info.c \
    src/log.c \
    src/parse.c \
    src/parse_util.c \
    src/stream.c \
    src/value.c \
    src/value_util.c \
    src/yaml.c

src_headers = \
    src/block.h \
    src/compat/endian.h \
    src/context.h \
    src/error.h \
    src/event.h \
    src/file.h \
    src/info.h \
    src/log.h \
    src/parse.h \
    src/parse_util.h \
    src/stream.h \
    src/stream_intern.h \
    src/types/asdf_common_tag_map.h \
    src/util.h \
    src/value.h \
    src/value_util.h \
    src/yaml.h

include_dir = $(top_srcdir)/include

AM_CFLAGS = $(ASDF_CFLAGS) -fvisibility=hidden
AM_CPPFLAGS = $(ASDF_CPPFLAGS) -I$(top_srcdir)/third_party/STC/include -I$(top_srcdir)/include
AM_LDFLAGS = $(ASDF_LDFLAGS)
ACLOCAL_AMFLAGS = -Im4

include_HEADERS = $(include_dir)/asdf.h
nobase_include_HEADERS = \
    $(include_dir)/asdf.h \
    $(include_dir)/asdf/event.h \
    $(include_dir)/asdf/file.h \
    $(include_dir)/asdf/log.h \
    $(include_dir)/asdf/parse.h \
    $(include_dir)/asdf/util.h \
    $(include_dir)/asdf/value.h \
    $(include_dir)/asdf/yaml.h
noinst_HEADERS = $(src_headers)


# libasdf library
#include .c and .h in SOURCES so that both appear in dist
lib_LTLIBRARIES = libasdf.la
libasdf_la_SOURCES = $(src_files)
libasdf_la_CFLAGS = $(AM_CFLAGS) $(FYAML_CFLAGS) $(CODE_COVERAGE_CFLAGS)
libasdf_la_LDFLAGS = $(CODE_COVERAGE_LDFLAGS)
libasdf_la_LIBADD = $(FYAML_LIBS) third_party/libstc.la

# The asdf command line tool
if ASDF_BUILD_TOOL
bin_PROGRAMS = asdf
asdf_SOURCES = src/main.c
asdf_CFLAGS = $(AM_CFLAGS) $(FYAML_CFLAGS) $(CODE_COVERAGE_CFLAGS)
asdf_LDFLAGS = $(CODE_COVERAGE_LDFLAGS)
asdf_LDADD = libasdf.la $(ARGP_LIB)
endif # ASDF_BUILD_TOOL


# Misc make targets
format:
	clang-format -i $(src_files) $(src_headers)


tidy:
	clang-tidy $(src_files) -- \
	    $(DEFS) $(DEFAULT_INCLUDES) $(AM_CPPLFAGS) $(CPPFLAGS) $(asdf_CFLAGS)


CODE_COVERAGE_IGNORE_PATTERN = \
    $(abs_top_srcdir)/tests/* \
    $(abs_top_srcdir)/tests/munit/*

# For rules generated by AX_AM_MACROS_STATIC; e.g. code coverage rules
include $(top_srcdir)/aminclude_static.am

SUBDIRS = tests third_party

# Include sample files from asdf-standard in the distribution (used in tests)
# Eventually test against older reference files as well
reference_files = $(top_srcdir)/asdf-standard/reference_files/1.6.0
EXTRA_DIST = \
    $(reference_files)/anchor.asdf \
    $(reference_files)/ascii.asdf \
    $(reference_files)/basic.asdf \
    $(reference_files)/complex.asdf \
    $(reference_files)/compressed.asdf \
    $(reference_files)/endian.asdf \
    $(reference_files)/exploded0000.asdf \
    $(reference_files)/exploded.asdf \
    $(reference_files)/float.asdf \
    $(reference_files)/int.asdf \
    $(reference_files)/scalars.asdf \
    $(reference_files)/shared.asdf \
    $(reference_files)/stream.asdf \
    $(reference_files)/structured.asdf \
    $(reference_files)/unicode_bmp.asdf \
    $(reference_files)/unicode_spp.asdf
