nobase_include_HEADERS = \
    asdf.h \
    asdf/core/asdf.h \
    asdf/core/extension_metadata.h \
    asdf/core/history_entry.h \
    asdf/core/ndarray.h \
    asdf/core/software.h \
    asdf/event.h \
    asdf/extension.h \
    asdf/file.h \
    asdf/log.h \
    asdf/parse.h \
    asdf/util.h \
    asdf/value.h \
    asdf/yaml.h


if WITH_GWCS
    nobase_include_HEADERS += \
        asdf/gwcs/core.h \
        asdf/gwcs/fitswcs_imaging.h \
        asdf/gwcs/frame.h \
        asdf/gwcs/frame_celestial.h \
        asdf/gwcs/frame2d.h \
        asdf/gwcs/gwcs.h \
        asdf/gwcs/step.h \
        asdf/gwcs/transform.h \
        asdf/gwcs/transforms/property/bounding_box.h \
        asdf/gwcs/wcs.h
endif
